[project]
name = "holded-mcp"
version = "0.1.0"
description = "MCP server for Holded"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]
